# portfolio_ninja

./: .env.example  .gitignore  .mcp.json  ACTIVE_RISK_REGISTER.md  CLAUDE.md  LEGACY_CONTAMINATION_RISKS.md  LEGACY_MIGRATION_PLAN.md  LEGACY_MINING_EVIDENCE.md  LEGACY_MODULE_MAPPING.md  LEGACY_REPO_INDEX.md  PROJECT_MAP.md  README.md  STATE_HANDOFF.md  STORY.md  conftest.py  pyproject.toml  run_e2e_demo.py
.claude/: settings.json
.claude/agents/: architect.md  builder.md  code-reviewer.md  contract-writer.md  integrator.md  reviewer.md  (+2 more)
artifacts/: dataplane_real_sample.csv  dataplane_real_sample.json
config/: experiment_config.yaml  params.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_HARDENING_PLAN.md  CASE_FACTS.md  escalation_protocol.md
scripts/: _e2e_show.py  _find_good_tickers.py  _sample_market_state.py  auto_watcher.py  check_adr.py  check_dates.py  check_yfinance.py  demo_dataplane.py  demo_dataplane_real.py  managed_builder.py  normalize_csv.py  run_pipeline.py  update_data.py
tests/: test_audit_monitor.py  test_data_plane.py  test_date_normalizer.py  test_domain.py  test_e2e_experiment_engine.py  test_e2e_market_state_engine.py  test_e2e_pipeline.py  test_e2e_real_data.py  test_e2e_universe_gateway.py  test_evaluation_engine.py  test_execution_engine.py  test_experiment_config_loader.py  test_experiment_engine.py  test_market_state_engine.py  test_params_loader.py  test_portfolio_construction_engine.py  test_real_adapter.py  test_risk_engine.py  test_score_arbitration_engine.py  test_scoring_engine.py  test_smoke.py  test_universe_gateway.py
(+65 files in other folders)
